[package]
name = "moosync"
edition = "2021"
version = "0.0.0"
authors = ["you"]
description = "A Tauri App"

[dependencies]
uuid = {version = "1.18.1", features = ["v4", "js"] }
async-trait = "0.1.89"
chrono = { default-features = false, version = "=0.4.40" }
futures = { default-features = false, version = "0.3.31" }
iso8601 = { default-features = false, version = "0.6.3" }
open = "5.3.2"
rspotify = { version = "0.15.2" }
serde_json = { default-features = false, version = "1.0" }
tracing-appender = "0.2.3"
url = "2.5.7"
database = { path = "./database" }
extensions = { path = "./extensions" }
file_scanner = { path = "./file_scanner" }
librespot = { path = "./librespot" }
lyrics = { path = "./lyrics" }
macros = { path = "./macros" }
mpris = { path = "./mpris" }
preferences = { path = "./preferences" }
themes = { path = "./themes" }
types = { path = "./types" }
rodio-player = { path = "./rodio-player" }
oauth2 = { default-features = false, version = "5.0", features = ["reqwest"] }
regex = { default-features = false, version = "1.12.2" }
reqwest = { default-features = false, version = "0.12.24" }
serde = { default-features = false, version = "1.0" }
tauri = { version = "2.9.1", features = [
    "common-controls-v6",
    "wry",
    "protocol-asset",
    "tray-icon",
    "devtools",
    "test"
], default-features = false }
tauri-plugin-deep-link = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-dialog = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-single-instance = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-opener = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-file-scanner = { path = "../lib/tauri-plugin-file-scanner" }
tauri-plugin-audioplayer = { path = "../lib/tauri-plugin-audioplayer" }
tauri-plugin-self-update = { path = "../lib/tauri-plugin-self-update" }

tracing = { default-features = false, version = "0.1.41" }
tracing-subscriber = { features = [
    "ansi",
    "env-filter",
], default-features = false, version = "0.3.20" }
rustls = { version = "0.23.34", features = ["ring"] }
tauri-invoke-proc = { path = "./tauri-invoke-proc" }
openssl-sys = { version = "*", features = ["vendored"] }
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }
clap = { version = "4.5.50", features = ["derive"] }
tokio = { version = "1.48.0", features = ["sync"] }
semver = "1.0.27"

[build-dependencies.tauri-build]
version = "2.5.1"
features = []

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-updater = "2.9.0"

[target."cfg(target_os = \"linux\")".dependencies]
webkit2gtk = "2.0.1"

[target."cfg(target_os = \"macos\")".dependencies]
objc = "0.2.7"

[features]
custom-protocol = ["tauri/custom-protocol"]

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
required-features = []
