[package]
name = "database"
edition = "2021"
version = "0.1.0"

[dependencies]
serde_json = { default-features = false, version = "1.0" }
diesel_logger = { git = "https://github.com/Ovenoboyo/diesel-logger.git" }
tracing = { version = "0.1.41", default-features = false }
diesel = { version = "2.3.3", default-features = false }
diesel_migrations = { version = "2.3.0", default-features = false }
serde = { version = "1.0", default-features = false }
uuid = { version = "1.18.1", default-features = false }

# [target.'cfg(any(windows))'.dependencies]
libsqlite3-sys = { version = "0.35.0", features = ["bundled"] }

[build-dependencies]
anyhow = "1.0.100"
glob = "0.3.3"
