[package]
name = "extensions"
edition = "2021"
version = "0.1.0"

[dependencies]
base64 = { default-features = false, version = "0.22.1" }
fs_extra = "1.3.0"
futures = { default-features = false, version = "0.3.31", features = ["executor"] }
serde = { default-features = false, version = "1.0.228" }
serde_yaml = "0.9.34"
uuid = { default-features = false, version = "1.18.1" }
zip-extensions = { default-features = false, version = "0.8" }
tracing = { version = "0.1.41", default-features = false }
command-group = "5.0.1"
extism = "1.12.0"
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.145"
regex = "1.12.2"
wasmtime = "*"
interprocess = { version = "2.2.3", features = ["tokio"] }
rust-crypto = "0.2.36"
types = { path = "../types", default-features = false, features = ["extensions-core"] }


[dependencies.reqwest]
version = "0.12.24"
features = ["stream", "json"]
