[package]
name = "extensions"
edition = "2024"

[dependencies]
types = { git = "https://github.com/Moosync/Moosync", default-features = false, branch = "bazel" }
extism = "1.13.0"
extism-convert = "1.13.0"
fs_extra = "1.3.0"
futures = "0.3.31"
interprocess = "2.2.3"
mockall = "0.14.0"
regex = "1.12.2"
reqwest = { version = "0.13.1", features = ["stream", "json"] }
rust-crypto = "0.2.36"
serde = "1.0.228"
serde_json = "1.0.148"
tokio = "1.48.0"
tracing = "0.1.44"
uuid = "1.19.0"
zip-extensions = "0.8"
async-trait = "0.1.89"
