[package]
name = "themes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fs_extra = "1.3.0"
regex = { default-features = false, version = "1.12.2" }
serde_json = { default-features = false, version = "1.0" }
types = { path = "../types", default-features = false, features = ["core"] }
uuid = { default-features = false, version = "1.18.1" }
zip = { version = "6.0", default-features = false, features = ["deflate"] }
zip-extensions = { default-features = false, version = "0.8.3" }
tracing = { version = "0.1.41", default-features = false }
notify = "8.2.0"
reqwest = { version = "0.12.24", features = ["stream"] }
serde = "1.0.228"
futures = { default-features = false, version = "0.3.31" }
