[package]
name = "types"
edition = "2021"
version = "0.1.0"

[dependencies]
serde_json = { version = "1.0" }
thiserror = "2.0.17"
tracing = { version = "0.1.41", default-features = false, features = [
    "attributes",
] }
async-trait = { version = "0.1.89", features = [] }
serde = { version = "1.0", features = ["derive"] }
bitcode = { version = "0.6.7" }
