[package]
name = "tauri-plugin-audioplayer"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-audioplayer"

[dependencies]
tauri = { version = "2.1.0" }
serde = "1.0"
types = { path = "../../src-tauri/types", default_features = false }
serde_json = "1.0.134"


[build-dependencies]
tauri-plugin = { version = "2.0.2", features = ["build"] }
