[package]
name = "tauri-plugin-audioplayer"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-audioplayer"

[dependencies]
tauri = { version = "2.9.1" }
serde = "1.0"
# types = { path = "../../src-tauri/types" }
serde_json = "1.0.145"


[build-dependencies]
tauri-plugin = { version = "2.5.1", features = ["build"] }
