load("@rules_rust//cargo:defs.bzl", "cargo_build_script")
load("@rules_rust//rust:defs.bzl", "rust_library")

# gazelle:rust_cargo_lockfile Cargo.lock
# gazelle:rust_crates_prefix @crates//:
# gazelle:rust_mode generate_from_cargo

filegroup(
    name = "permissions",
    srcs = glob([
        "permissions/**/*",
    ]),
)

rust_library(
    name = "tauri-plugin-file-scanner",
    srcs = [
        "src/desktop.rs",
        "src/lib.rs",
        "src/mobile.rs",
    ],
    compile_data = [
        ":permissions",
    ],
    visibility = ["//visibility:public"],
    deps = [
        ":build_script",
        "@crates//:tauri",
    ],
)

cargo_build_script(
    name = "build_script",
    srcs = ["build.rs"],
    crate_root = "build.rs",
    pkg_name = "tauri-plugin-file-scanner",
    visibility = ["//visibility:public"],
    deps = ["@crates//:tauri-plugin"],
)
