[package]
name = "tauri-plugin-file-scanner"
version = "0.1.0"
authors = ["You"]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-file-scanner"

[dependencies]
tauri = { version = "2.2.1" }
serde = "1.0"
thiserror = "2"
types = { path = "../../src-tauri/types" }
serde_json = "1.0.135"

[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }
