[package]
name = "tauri-plugin-self-update"
version = "0.1.0"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.77.2"
exclude = ["/examples", "/dist-js", "/guest-js", "/node_modules"]
links = "tauri-plugin-self-update"

[dependencies]
tauri = { version = "2.3.1" }
serde = "1.0"
types = { path = "../../src-tauri/types" }
thiserror = "2"

[build-dependencies]
tauri-plugin = { version = "2.0.4", features = ["build"] }
