[package]
name = "database"
edition = "2021"
version = "0.1.0"

[dependencies]
serde_json = { default-features = false, version = "1.0" }
diesel_logger = { git = "https://github.com/Ovenoboyo/diesel-logger.git" }
tracing = { version = "0.1.41", default-features = false }
diesel = { version = "2.2.8", default-features = false }
diesel_migrations = { version = "2.2.0", default-features = false }
macros = { path = "../macros", features = [] }
serde = { version = "1.0", default-features = false }
types = { path = "../types", features = [] }
uuid = { version = "1.11.1", default-features = false }

# [target.'cfg(any(windows))'.dependencies]
libsqlite3-sys = { version = "0.31.0", features = ["bundled"] }

[build-dependencies]
anyhow = "1.0.97"
glob = "0.3.2"
