[package]
name = "extensions"
edition = "2021"
version = "0.1.0"

[dependencies]
base64 = { default-features = false, version = "0.22.1" }
fs_extra = "1.3.0"
futures = { default-features = false, version = "0.3.31" }
serde = { default-features = false, version = "1.0.218" }
serde_yaml = "0.9.34"
uuid = { default-features = false, version = "1.15.1" }
zip-extensions = { default-features = false, version = "0.8" }
tracing = { version = "0.1.41", default-features = false }
command-group = "5.0.1"
extism = "1.10.0"
tokio = { version = "1.43.0", features = ["rt-multi-thread", "macros"] }
serde_json = "1.0.140"
regex = "1.11.1"
wasmtime = "*"
interprocess = { version = "2.2.2", features = ["tokio"] }

[dependencies.reqwest]
version = "0.12.12"
features = ["stream"]

[dependencies.types]
path = "../types"
features = []
