[package]
name = "file_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
database = { path = "../database" }
substring = "1.4.5"
types = { path = "../types" , default-features = false }
blake3 = { version = "1.5.4", default-features = false }
fast_image_resize = "4.2.1"
image = { default-features = false, version = "0.25.2" }
lazy_static = "1.5.0"
lofty = { default-features = false, version = "0.21.1" }
regex = { default-features = false, version = "1.10.6" }
threadpool = "1.8.1"
num_cpus = "1.16.0"
uuid = { version = "1.10.0", default-features = false }
dunce = "1.0.5"
tracing = { version = "0.1.40", default-features = false }
