[package]
name = "file_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
substring = "1.4.5"
types = { path = "../types", default-features = false, features = ["core"] }
blake3 = { version = "1.6.1", default-features = false }
fast_image_resize = "5.1.2"
image = { version = "0.25.5" }
lazy_static = "1.5.0"
lofty = { default-features = false, version = "0.22.2" }
regex = { default-features = false, version = "1.11.1" }
threadpool = "1.8.1"
num_cpus = "1.16.0"
uuid = { version = "1.11.1", default-features = false, features = ["v4"] }
dunce = "1.0.5"
tracing = { version = "0.1.41", default-features = false }
