[package]
name = "librespot"
edition = "2021"
version = "0.1.0"

[dependencies]
regex = { default-features = false, version = "1.10.6" }
url = "2.5.2"
tracing = { version = "0.1.40", default-features = false }
futures-util = { version = "0.3.30", default-features = false }
librespot = { git = "https://github.com/librespot-org/librespot", branch = "dev", default-features = false, features = [
    "rodio-backend",
] }
protobuf = { version = "3.5.1", default-features = false, features = ["bytes"] }
reqwest = { version = "0.12.7", default-features = false }
serde = { version = "1.0", default-features = false }
tokio = { version = "1.40.0", default-features = false }
types = { path = "../types", features = [] }
