[package]
name = "librespot"
edition = "2021"
version = "0.1.0"

[dependencies]
regex = { default-features = false, version = "1.12.2" }
url = "2.5.7"
tracing = { version = "0.1.41", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
librespot = { git = "https://github.com/librespot-org/librespot", branch = "dev", default-features = false, features = [
    "rodio-backend",
    "native-tls",
] }
protobuf = { version = "3.7.2", default-features = false, features = ["bytes"] }
reqwest = { version = "0.12.24", default-features = false }
serde = { version = "1.0", default-features = false }
tokio = { version = "1.48.0", default-features = false }
types = { path = "../types", features = ["core"], default-features = false }
futures = "0.3.31"
env_logger = "0.11.8"
uuid = "1.18.1"
