[package]
name = "lyrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { default-features = false, version = "1.10.6" }
reqwest = { default-features = false, version = "0.12.5" }
serde_json = { default-features = false, version = "1.0.125" }
types = { path = "../types" , default-features = false }
librespot = { path = "../librespot" , default-features = false }
tracing = { version = "0.1.40", default-features = false }
