[package]
name = "lyrics"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = { default-features = false, version = "1.11.1" }
reqwest = { default-features = false, version = "0.12.9" }
serde_json = { default-features = false, version = "1.0.133" }
types = { path = "../types" , default-features = false }
librespot = { path = "../librespot" , default-features = false }
tracing = { version = "0.1.41", default-features = false }
