[package]
name = "mpris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
souvlaki = { version = "0.7.3", default-features = false, features = [
    "use_zbus",
] }
types = { path = "../types" }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.44"
features = ["Win32_Foundation"]
