[package]
name = "mpris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
types = { path = "../types" }
tracing = { version = "0.1.41", default-features = false }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "=0.44"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]

[target.'cfg(target_os = "windows")'.dependencies]
raw-window-handle = "=0.5.2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
souvlaki = { version = "=0.7.3" }

[target.'cfg(any(target_os = "android", target_os = "ios"))'.dependencies]
tauri-plugin-audioplayer = { path = "../../lib/tauri-plugin-audioplayer" }
tauri = { version = "2.3.1", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
