[package]
name = "preferences"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
types = { path = "../types" }
keyring = { version = "3", features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
whoami = "1.5.1"
rand = "0.8.5"
hex = "0.4.3"
chacha20poly1305 = "0.10.1"
json_dotpath = "1.1.0"
crossbeam-channel = "0.5.13"
jsonschema = { version = "0.18.0", features = ["draft202012"] }
tracing = { version = "0.1.40", features = ["attributes"] }
