[package]
name = "preferences"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", default-features = false }
serde_json = { default-features = false, version = "1.0" }
types = { path = "../types" }
keyring = { version = "3", default-features = false, features = [
    "apple-native",
    "windows-native",
    "sync-secret-service",
] }
whoami = { default-features = false, version = "1.5.2" }
hex = { default-features = false, version = "0.4.3" }
chacha20poly1305 = "0.10.1"
json_dotpath = "1.1.0"
crossbeam-channel = { default-features = false, version = "0.5.14" }
jsonschema = { version = "0.29.0", default-features = false }
tracing = { version = "0.1.41", default-features = false }
