[package]
name = "rodio-player"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = { git = "https://github.com/RustAudio/rodio", default-features = false, features = [
    "symphonia-all",
] }
types = { path = "../types", default-features = false, features = ["core"] }
stream-download = "0.21.1"
tracing = { version = "0.1.41", default-features = false }
futures = "0.3.31"
tokio = {version = "1.45.1", features = ["rt-multi-thread"]}
hls_client = { version = "1.1.0", default-features = false, features = ["stream_download", "reqwest-native-tls", "tracing"] }
