[package]
name = "rodio-player"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = { git = "https://github.com/RustAudio/rodio", default-features = false, features = [
    "playback",
] }
types = { path = "../types", default-features = false, features = ["core"] }
tracing = { version = "0.1.41", default-features = false }
futures = "0.3.31"
tokio = { version = "1.48.0", features = ["rt-multi-thread"] }
rsmpeg = "0.18.0"
thiserror = "2.0.17"

[build-dependencies]
num_cpus = "1.17.0"
